<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:id="@+id/new_product_name_container"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:layout_height="wrap_content">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/new_product_name"
                android:layout_marginBottom="@dimen/activity_horizontal_margin"
                android:id="@+id/editTextName" />
        </android.support.design.widget.TextInputLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/new_product_name_container"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/category_title"
            android:id="@+id/category_title" />

        <Spinner
            android:layout_below="@+id/category_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:id="@+id/spinnerCategory" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/spinnerCategory"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/brand"
            android:id="@+id/brand_title" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/brand_title"
            android:id="@+id/spinnerBrand"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:layout_below="@+id/spinnerBrand"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/read_QR"
            android:gravity="center"
            android:textSize="18sp"

            android:background="@android:color/holo_blue_dark"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:id="@+id/editTextQRCode" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:layout_below="@+id/editTextQRCode"
            android:id="@+id/new_product_sn_container"
            android:layout_height="wrap_content">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/serial_num"
                android:layout_marginBottom="@dimen/activity_horizontal_margin"
                android:id="@+id/editTextSerial_No" />
        </android.support.design.widget.TextInputLayout>

        <EditText
            android:layout_width="match_parent"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:layout_below="@+id/new_product_sn_container"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:hint="@string/release_date"
            android:focusableInTouchMode="false"
            android:cursorVisible="false"
            android:textSize="16sp"
            android:id="@+id/editTextReleaseDate" />


        <EditText
            android:layout_width="match_parent"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:layout_below="@+id/editTextReleaseDate"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="false"
            android:cursorVisible="false"
            android:textSize="16sp"
            android:hint="@string/new_product_add_date"
            android:id="@+id/editTextAddDate"/>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:layout_below="@+id/editTextAddDate"
            android:id="@+id/new_product_add_container"
            android:layout_height="wrap_content">
            <EditText
                android:inputType="textMultiLine"
                android:minLines="5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/editTextNote"
                android:layout_marginBottom="@dimen/activity_horizontal_margin"
                android:hint="@string/note" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:layout_below="@+id/new_product_add_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Base.Widget.AppCompat.Button.Colored"
            android:text="@string/save"
            android:id="@+id/buttonSave" />

        <Button
            android:layout_width="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/new_product_add_container"
            android:layout_height="wrap_content"
            android:text="@string/clear"
            style="@style/Base.Widget.AppCompat.Button.Colored"
            android:id="@+id/buttonClear" />

    </RelativeLayout>



    </ScrollView>

