<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".view.LoginActivity"
    tools:showIn="@layout/activity_login">


    <TextView
        android:id="@+id/log_LoginText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/auth"
        android:layout_centerHorizontal="true"
        android:textSize="24dp" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:id="@+id/email_materila_design_container"
        android:layout_below="@+id/log_LoginText"
        android:layout_height="wrap_content">
        <EditText
            android:layout_marginTop="@dimen/activity_horizontal_margin"

            android:id="@+id/log_EmailEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress" />
    </android.support.design.widget.TextInputLayout>




    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_below="@+id/email_materila_design_container"
        android:id="@+id/password_material_design_container"
        android:layout_height="wrap_content">
        <EditText
            android:maxLines="1"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:hint="@string/password_hint"
            android:layout_below="@+id/log_EmailEdit"
            android:id="@+id/log_PasswordEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />
    </android.support.design.widget.TextInputLayout>


    <CheckBox
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:layout_below="@+id/password_material_design_container"
        android:id="@+id/log_SaveUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/remember_me" />

    <Button
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:id="@+id/log_ButtonLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        style="@style/Base.Widget.AppCompat.Button.Colored"
        android:text="@string/login_button_text" />

    <Button

        android:onClick="onClickRegist"
        android:layout_alignParentRight="true"
        android:layout_above="@+id/log_ButtonLogin"
        android:gravity="right|center"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:id="@+id/log_ButtonRegist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/regist_button" />

</RelativeLayout>
