<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.zuhra.sharemebackendv2.view.RegistrationActivity">


    <TextView
        android:id="@+id/reg_RegistrationText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/regist_title"
        android:textSize="24dp" />


    <android.support.design.widget.TextInputLayout
        android:id="@+id/name_md_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/reg_RegistrationText">

        <EditText
            android:id="@+id/reg_NameEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/regist_name_hint"
            android:maxLines="1" />
    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/email_md_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/name_md_container">

        <EditText
            android:id="@+id/reg_EmailEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:maxLines="1" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/pass_md_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/email_md_container">

        <EditText
            android:id="@+id/reg_PasswordEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:maxLines="1" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/phone_num_md_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/pass_md_container">

        <EditText
            android:id="@+id/reg_PhoneEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/number_hint"
            android:inputType="phone"
            android:maxLines="1" />
    </android.support.design.widget.TextInputLayout>


    <Spinner
        android:layout_below="@+id/phone_num_md_container"
        android:id="@+id/reg_org"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_horizontal_margin"/>


    <Button
        android:id="@+id/reg_ButtonRegistration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        style="@style/Base.Widget.AppCompat.Button.Colored"
        android:layout_centerHorizontal="true"
        android:text="@string/login_button_text" />



    <TextView
        android:id="@+id/debugView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"

        android:layout_above="@id/reg_ButtonRegistration"
        tools:text="DebugText" />

</RelativeLayout>
